# New_IA

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  logging.yaml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20260601_0001_initial_archive_schema.py
scripts/: entrypoint-api.sh  entrypoint-worker.sh
src/app/: main.py
src/app/application/services/: __init__.py  document_upload_service.py  openai_embedding_service.py  pdf_extraction_service.py  text_chunking_service.py
src/app/core/: config.py  logging.py
src/app/domain/entities/: __init__.py  article_chunk.py  extracted_page.py
src/app/domain/repositories/: document_repository.py
src/app/infrastructure/db/: session.py
src/app/infrastructure/db/models/: __init__.py  archive.py
src/app/infrastructure/repositories/: sqlalchemy_document_repository.py  sqlalchemy_processing_repository.py
src/app/presentation/api/v1/routers/: documents.py  health.py
src/app/shared/di/: container.py
src/app/worker/: celery_app.py
src/app/worker/tasks/: __init__.py  document_processing.py
