[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-ingestion-platform"
version = "0.1.0"
description = "Production-ready document ingestion platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "sqlalchemy>=2.0.31,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pgvector>=0.3.4,<1.0.0",
  "redis>=5.0.7,<6.0.0",
  "celery>=5.4.0,<6.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "dependency-injector>=4.41.0,<5.0.0",
  "structlog>=24.4.0,<25.0.0",
  "python-json-logger>=2.0.7,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "PyMuPDF>=1.24.9,<2.0.0",
  "pytesseract>=0.3.10,<1.0.0",
  "Pillow>=10.4.0,<11.0.0",
  "openai>=1.35.14,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.5.6,<1.0.0",
  "mypy>=1.11.1,<2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
